Update GuideWelcomeScreen.java